styles/styles.css
/* CSS Reset Starts Here */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

button {
    background: transparent;
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;
  }

/* CSS Reset Ends Here */
body{
    font-family: 'Roboto',sans-serif;
    line-height: 1.5em;
}
.header{
    padding: 15px 10vw;
    background-color: #1F2937;
    display: flex;
    justify-content: space-between;
}

ul{
    display: flex;
    gap: 30px;
    color: #F9FAF8;
    font-size: 18px;
}

a{
    text-decoration: none;
    color: #F9FAF8;
}

.logo{
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 500;
}

.hero-panel{
    background-color: #1F2937;
    padding: 3vw 10vw;
    display: flex;
}

.hero-right img{
    filter: brightness(80%);
    border-radius: 6px;
}

#heading{
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 700;
    margin-bottom: 12px;
    line-height: 1em;
}

#subtitle{
    color: #F9FAF8;
    margin-bottom: 18px;
    font-weight: 200;
    
}

#hero-cta{
    background-color: #3882F6;
    font-size: 15px;
    font-weight: 600;
    padding: 10px 30px;
    border-radius: 8px;
    color: #F9FAF8;
}

.hero-right img{
    width: 500px;
}

.info-icons{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 50px;
}

.info-icons p{
    font-size: 36px;
    font-weight: 600;
    color: #1F2937;
    padding: 50px 0;
}

.icons{
    display: flex;
    justify-content: space-around;
    margin-bottom: 50px;
    gap: 50px;
}

.icons img{
    width: 200px;
    border:2px solid #3882F6;
    height: 200px;
    border-radius: 8px;
    margin-bottom: 15px;
}

figure{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 200px;
    text-align: center;
    justify-content: flex-start;
    align-items: center;
}

figcaption{
    font-size: 14px;
    font-weight: 300;
}

.quote-section{
    background-color: #E5E7EB;
    display: flex;
    padding: 50px 200px;
    flex-direction: column;
}

.quote{
    /* text-align: center; */
    font-size: 24px;
    font-style: italic;
    font-weight: 300;
    padding-bottom: 20px;
    line-height: 1.5em;
}

.attr{
    margin-top: 5px;
    text-align: right;
    font-size: 16px;
    font-weight: 600;
}

.cta{
    background-color: #3882F6;
    margin: 80px;
    padding: 50px;
    display: flex;
    justify-content: space-between;
    border-radius: 8px;
}

.cta-headline{
    color: #F9FAF8;
    font-size: 18px;
    font-weight: 600;
    padding-bottom: 8px;
}

.cta-info{
    color: #F9FAF8;
    font-size: 14px;
    font-weight: 300;
}

.cta-button{
    font-size: 15px;
    font-weight: 600;
    padding: 10px 30px;
    border-radius: 8px;
    border: 2px solid #F9FAF8;
    color: #F9FAF8;
}

.footer{
    padding: 25px;
    color: #F9FAF8;
    text-align: center;
    font-weight: 300;
    background-color: #1F2937;
}

